<resources>
    <string name="app_name">Kos Kita</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="name">Name</string>
    <string name="email_address">Email Address</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="password">Password</string>
    <string name="rumah_kos_kita">Rumah Kos Kita</string>
    <string name="reminder">Reminder</string>
    <string name="rule">Rule</string>
    <string name="rumah_kos">Rumah Kos</string>
    <string name="_31_hari_lagi">31 Hari lagi</string>
    <string name="pengingat_waktu_tersisa_di_kos">Pengingat waktu tersisa di kos</string>
    <string name="logout">Logout</string>
    <string name="sign_out">Sign-out</string>
    <string name="informasi_kos">Informasi Kos</string>
    <string name="informasi">Informasi</string>
    <string name="example_name">Didi Prasetyo</string>
    <string name="example_email">didiprasetyo@gmail.com</string>
    <string name="example_phone_number">081123123123</string>
    <string name="example_kos_name">Kos Putra Indah</string>
    <string name="example_street_name">jln. Pegangasaan Timur No 56</string>
    <string name="owner">Pemilik:</string>
    <string name="example_owner">Ibu Siti</string>
    <string name="ibu_kos">Ibu Kos</string>
    <string name="profile">Profile</string>
    <string name="peraturan">Peraturan</string>
    <string name="jatuh_tempo">Jatuh Tempo</string>
</resources>