<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.profile.ProfileFragment"
    android:paddingHorizontal="30dp"
    android:paddingTop="24dp"
    style="@style/MyBackgrounApp"
    >

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_user_information"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/informasi"
        android:textStyle="bold"
        android:textSize="20sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_user_information"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:cardCornerRadius="16dp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/tv_user_information"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:cardElevation="8dp"
        app:cardUseCompatPadding="true"
        >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingVertical="24dp">

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/img_profile"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:src="@drawable/profile"
                android:adjustViewBounds="true"
                android:scaleType="fitXY"
                android:layout_marginStart="16dp"
                app:shapeAppearanceOverlay="@style/Border20dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/example_name"
                android:textSize="16sp"
                android:textStyle="bold"
                android:layout_marginStart="16dp"
                app:layout_constraintLeft_toRightOf="@id/img_profile"
                app:layout_constraintTop_toTopOf="parent"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/example_email"
                android:layout_marginStart="16dp"
                android:layout_marginTop="10dp"
                app:layout_constraintTop_toBottomOf="@id/tv_name"
                app:layout_constraintStart_toEndOf="@id/img_profile"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/example_phone_number"
                android:layout_marginStart="16dp"
                android:layout_marginTop="10dp"
                app:layout_constraintTop_toBottomOf="@id/tv_email"
                app:layout_constraintStart_toEndOf="@id/img_profile"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>


    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_kos_information"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/informasi_kos"
        android:textStyle="bold"
        android:textSize="20sp"
        android:layout_marginTop="74dp"
        app:layout_constraintTop_toBottomOf="@id/cv_user_information"
        app:layout_constraintStart_toStartOf="parent"
        />

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_kos_information"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:cardCornerRadius="16dp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/tv_kos_information"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginBottom="70dp"
        app:cardElevation="8dp"
        app:cardUseCompatPadding="true"
        >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingVertical="24dp">

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/img_kos"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:src="@drawable/profile"
                android:adjustViewBounds="true"
                android:scaleType="fitXY"
                android:layout_marginStart="16dp"
                app:shapeAppearanceOverlay="@style/Border20dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_kos_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/example_kos_name"
                android:textSize="16sp"
                android:textStyle="bold"
                android:layout_marginStart="16dp"
                app:layout_constraintLeft_toRightOf="@id/img_kos"
                app:layout_constraintTop_toTopOf="parent"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_owner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/owner"
                android:layout_marginStart="16dp"
                android:layout_marginTop="10dp"
                app:layout_constraintTop_toBottomOf="@id/tv_kos_name"
                app:layout_constraintStart_toEndOf="@id/img_kos"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/example_owner"
                android:layout_marginTop="10dp"
                app:layout_constraintLeft_toRightOf="@id/tv_owner"
                app:layout_constraintTop_toBottomOf="@id/tv_kos_name"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="170dp"
                android:layout_height="wrap_content"
                android:text="@string/example_street_name"
                android:layout_marginStart="16dp"
                android:layout_marginTop="10dp"
                app:layout_constraintTop_toBottomOf="@id/tv_owner"
                app:layout_constraintStart_toEndOf="@id/img_kos"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>